@@ -20,11 +20,12 @@ import java.nio.charset.Charset;
 import java.util.NoSuchElementException;
 import java.util.concurrent.Callable;
 import java.util.concurrent.ExecutorService;
-import java.util.concurrent.Executors;
 import java.util.concurrent.Future;
 import java.util.concurrent.TimeUnit;
 import java.util.concurrent.TimeoutException;
 
+import com.google.common.base.Predicate;
+import com.google.common.base.Predicates;
 import org.apache.solr.SolrTestCaseJ4;
 import org.apache.solr.common.cloud.SolrZkClient;
 import org.apache.solr.common.util.ExecutorUtil;
@@ -146,6 +147,55 @@ public class DistributedQueueTest extends SolrTestCaseJ4 {
     assertEquals(testData, future.get(1000, TimeUnit.MILLISECONDS));
     assertNotNull(dq.poll());
     assertNull(dq.poll());
+  }
+
+  @Test
+  public void testPeekElements() throws Exception {
+    String dqZNode = "/distqueue/test";
+    final byte[] data = "hello world".getBytes(UTF8);
+
+    final DistributedQueue dq = makeDistributedQueue(dqZNode);
+
+    // Populate with data.
+    dq.offer(data);
+    dq.offer(data);
+    dq.offer(data);
+
+    // Should be able to get 0, 1, 2, or 3 instantly
+    for (int i = 0; i <= 3; ++i) {
+      assertEquals(i, dq.peekElements(i, 0, Predicates.<String>alwaysTrue()).size());
+    }
+
+    // Asking for more should return only 3.
+    assertEquals(3, dq.peekElements(4, 0, Predicates.<String>alwaysTrue()).size());
+
+    // If we filter everything out, we should block for the full time.
+    long start = System.nanoTime();
+    assertEquals(0, dq.peekElements(4, 1000, Predicates.<String>alwaysFalse()).size());
+    assertTrue(System.nanoTime() - start >= TimeUnit.MILLISECONDS.toNanos(500));
+
+    // If someone adds a new matching element while we're waiting, we should return immediately.
+    executor.submit(new Runnable() {
+      @Override
+      public void run() {
+        try {
+          Thread.sleep(500);
+          dq.offer(data);
+        } catch (Exception e) {
+          // ignore
+        }
+      }
+    });
+    start = System.nanoTime();
+    assertEquals(1, dq.peekElements(4, 2000, new Predicate<String>() {
+      @Override
+      public boolean apply(String child) {
+        // The 4th element in the queue will end with a "3".
+        return child.endsWith("3");
+      }
+    }).size());
+    assertTrue(System.nanoTime() - start < TimeUnit.MILLISECONDS.toNanos(1000));
+    assertTrue(System.nanoTime() - start >= TimeUnit.MILLISECONDS.toNanos(250));
   }
 
   private void forceSessionExpire() throws InterruptedException, TimeoutException {
